--- a/paqueteonepick.html
+++ b/paqueteonepick.html
@@ -116,13 +116,13 @@
       <h1>OnePick</h1>
       <p class="sub">🎯 Paquete Semanal Exclusivo</p>
       <p class="price">¡1 Semana de Picks Diarios por solo $200 MXN!</p>
-      <p class="note">Acceso inmediato. Cupo limitado a 30 personas. Sin membresías ni suscripciones.</p>
+      <p class="note">Cupo limitado a 30 personas.</p>
       <p class="cta">Haz clic para asegurar tu lugar ahora:</p>
 
       <!-- BOTÓN MERCADOPAGO -->
       <script src="https://www.mercadopago.com.mx/integrations/v1/web-payment-checkout.js"
-        data-preference-id="611013744-87f82649-a958-47b2-86a1-ac06e779135c" data-source="button">
-      </script>
+data-preference-id="611013744-8576b7a0-fd28-4a8d-80a5-1cadd50b775b" data-source="button">
+</script>
 
       <p style="font-size: 0.85rem; color: #888;">Al pagar, estás aceptando los términos y condiciones de nuestra comunidad.</p>
       <a href="https://secretscores.github.io/secretscores/terminos.html" class="terminos">Consulta términos y condiciones</a>
