--- a/picks/index.html
+++ b/picks/index.html
@@ -119,12 +119,12 @@
 
   <div class="container">
     <div class="card">
-      <img src="imagenes/oficiallogo.png" alt="Logo OnePick" class="logo">
+      <img src="../imagenes/oficiallogo.png" alt="Logo OnePick" class="logo">
       <h1>¡Gracias por tu compra! 📈</h1>
       <p class="message">Aquí tienes el pronóstico exclusivo del día. Este análisis fue preparado especialmente para ayudarte a tomar decisiones informadas.</p>
 
       <div class="watermark">
-        <img src="imagenes/c0mb0p1ck35.jpeg" alt="Imagen desbloqueada">
+        <img src="../imagenes/c0mb0p1ck35.jpeg" alt="Imagen desbloqueada">
       </div>
 
 <!--<br>
