--- a/paquetes/index.html
+++ b/paquetes/index.html
@@ -125,7 +125,7 @@ data-preference-id="611013744-8576b7a0-fd28-4a8d-80a5-1cadd50b775b" data-source=
 </script>
 
       <p style="font-size: 0.85rem; color: #888;">Al pagar, estás aceptando los términos y condiciones de nuestra comunidad.</p>
-      <a href="https://secretscores.github.io/secretscores/terminos.html" class="terminos">Consulta términos y condiciones</a>
+      <a href="https://www.onepick.com.mx/terminos/" class="terminos">Consulta términos y condiciones</a>
 
 
       <div class="testimonios">
