--- a/terminos/index.html
+++ b/terminos/index.html
@@ -84,7 +84,7 @@
   <div class="container">
     <div class="card">
 
-      <img src="imagenes/oficiallogo.png" alt="Logo OnePick" class="logo">
+      <img src="../imagenes/oficiallogo.png" alt="Logo OnePick" class="logo">
       <h1>Términos y Condiciones de Uso</h1>
 
       <p><strong>Fecha de entrada en vigor:</strong> 11 de junio de 2025</p>
@@ -121,7 +121,7 @@
       </div>
 
       <p class="back-link">
-        <a href="index.html">🔙 Volver a la página principal</a>
+        <a href="https://www.onepick.com.mx/">🔙 Volver a la página principal</a>
       </p>
 
     </div>
