--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ data-preference-id="611013744-a1b270e8-55ae-432b-b19b-f2ec82c2771c" data-source=
 <br>-->
       
       <p style="font-size: 0.85rem; color: #888;">Al pagar, estás aceptando los términos y condiciones de nuestra comunidad.</p>
-      <a href="https://secretscores.github.io/secretscores/terminos.html" class="terminos">Consulta términos y condiciones</a>
+      <a href="https://www.onepick.com.mx/terminos/" class="terminos">Consulta términos y condiciones</a>
 
       <div class="testimonios">
         <strong>📢 Opiniones reales:</strong>
