--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
       <img src="imagenes/oficiallogo.png" alt="Logo OnePick" class="logo">
       <h1>OnePick</h1>
       <div class="icons">🍀🎯💰</div>
-      <p class="price">COMBO disponible $35 MXN</p>
-      <p class="note">Accede al pick COMBO exclusivo del día con una sola compra.</p>
+      <p class="price">$20 MXN</p>
+      <p class="note">Accede al pick exclusivo del día con una sola compra.</p>
       <p>¡Haz clic para pagar y desbloquear el pronóstico completo ahora!</p>
 
-      <p>COMBO MLB +111 & LMB +156</p>
+     <!-- <p>COMBO MLB +111 & LMB +156</p> -->
       <!-- BOTÓN MERCADOPAGO -->
       <script src="https://www.mercadopago.com.mx/integrations/v1/web-payment-checkout.js"
 data-preference-id="611013744-87f82649-a958-47b2-86a1-ac06e779135c" data-source="button">
