--- a/paquetes/index.html
+++ b/paquetes/index.html
@@ -112,7 +112,7 @@
 
   <div class="container">
     <div class="card">
-      <img src="imagenes/oficiallogo.png" alt="Logo OnePick" class="logo">
+      <img src="../imagenes/oficiallogo.png" alt="Logo OnePick" class="logo">
       <h1>OnePick</h1>
       <p class="sub">🎯 Paquete Semanal Exclusivo</p>
       <p class="price">¡1 Semana de Picks Diarios por solo $200 MXN!</p>
