--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>OnePick - Pronósticos del día</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
 
   <style>
     * {
@@ -13,7 +13,7 @@
     html, body {
       margin: 0;
       padding: 0;
-      height: 100%;
+      min-height: 100%;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background: linear-gradient(145deg, #0f0f10, #1c1c1e);
       color: #fff;
@@ -23,7 +23,8 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
+      min-height: 100vh;
+      padding: 20px;
     }
 
     .card {
@@ -114,19 +115,12 @@
       <p class="note">Accede al pick exclusivo del día con una sola compra.</p>
       <p>¡Haz clic para pagar y desbloquear el pronóstico completo ahora!</p>
 
-     <!-- <p>COMBO MLB +111 & LMB +156</p> -->
       <!-- BOTÓN MERCADOPAGO -->
       <script src="https://www.mercadopago.com.mx/integrations/v1/web-payment-checkout.js"
-data-preference-id="611013744-87f82649-a958-47b2-86a1-ac06e779135c" data-source="button">
-</script>
-<br>
-   <!--   <p>Momio LMB +165</p> -->
-      <!-- BOTÓN MERCADOPAGO -->
-    <!--  <script src="https://www.mercadopago.com.mx/integrations/v1/web-payment-checkout.js"
-data-preference-id="611013744-a1b270e8-55ae-432b-b19b-f2ec82c2771c" data-source="button">
-</script>
-<br>-->
-      
+        data-preference-id="611013744-87f82649-a958-47b2-86a1-ac06e779135c" data-source="button">
+      </script>
+      <br>
+
       <p style="font-size: 0.85rem; color: #888;">Al pagar, estás aceptando los términos y condiciones de nuestra comunidad.</p>
       <a href="https://www.onepick.com.mx/terminos/" class="terminos">Consulta términos y condiciones</a>
 
