--- a/terminos/index.html
+++ b/terminos/index.html
@@ -3,14 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>Términos y Condiciones</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
+
   <style>
     * { box-sizing: border-box; }
 
     html, body {
       margin: 0;
       padding: 0;
-      height: 100%;
+      min-height: 100%;
       background: linear-gradient(145deg, #0f0f10, #1c1c1e);
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       color: #fff;
