--- a/index.html
+++ b/index.html
@@ -111,22 +111,23 @@
       <img src="imagenes/oficiallogo.png" alt="Logo OnePick" class="logo">
       <h1>OnePick</h1>
       <div class="icons">🍀🎯💰</div>
-      <p class="price">$20 MXN</p>
-      <p class="note">Accede al pick exclusivo del día con una sola compra.</p>
-      <p>¡Haz clic para pagar y desbloquear el pronóstico completo ahora!</p>
+      <p class="price">$55 MXN</p>
+      <p class="note">Accede al PAQUETE ESPECIAL DE HOY exclusivo con una sola compra.</p>
+      <p>¡Haz clic para pagar y desbloquear los pronósticos completos ahora!</p>
       
-       <p class="note">Pick MLB momio +100</p>
+       <p class="note">Paquete Especial MLB+LMB+FIFA CWC</p>
+      <p class="price">Todo incluido en una sola compra, 2 Derechas + 2 Parlays, aprovecha y ahorra en un solo paquete.</p>
       <!-- BOTÓN MERCADOPAGO -->
       <script src="https://www.mercadopago.com.mx/integrations/v1/web-payment-checkout.js"
 data-preference-id="611013744-ec058834-e230-48dc-86fe-91a46850c0c3" data-source="button">
 </script>
       <br>
- <p class="note">Pick Combo MLB+LMB momio +139</p>
-<!-- BOTÓN MERCADOPAGO -->
+ <!-- <p class="note">Pick Combo MLB+LMB momio +139</p>
+<!-- BOTÓN MERCADOPAGO
       <script src="https://www.mercadopago.com.mx/integrations/v1/web-payment-checkout.js"
 data-preference-id="611013744-03580a65-a017-4076-a292-64605f697e4e" data-source="button">
 </script>
-      <br>
+      <br> -->
       
       <p style="font-size: 0.85rem; color: #888;">Al pagar, estás aceptando los términos y condiciones de nuestra comunidad.</p>
       <a href="https://www.onepick.com.mx/terminos/" class="terminos">Consulta términos y condiciones</a>
