Update and rename fj338bshw4u.html to p4qu3t3f1nd3.html

--- a/picks/p4qu3t3f1nd3.html
+++ b/picks/p4qu3t3f1nd3.html
@@ -123,10 +123,22 @@
     <div class="card">
       <img src="../imagenes/oficiallogo.png" alt="Logo OnePick" class="logo">
       <h1>¡Gracias por tu compra! 📈</h1>
-      <p class="message">Aquí tienes el pronóstico exclusivo del día. Este análisis fue preparado especialmente para ayudarte a tomar decisiones informadas.</p>
+      <p class="message">Aquí tienes los pronóstics exclusivs del día. Este análisis fue preparado especialmente para ayudarte a tomar decisiones informadas.</p>
 
       <div class="watermark">
-        <img src="../imagenes/fj338bshw4u.jpeg" alt="Imagen desbloqueada">
+        <img src="../imagenes/p4rl4y1.JPG" alt="Imagen desbloqueada">
+      </div>
+
+       <div class="watermark">
+        <img src="../imagenes/p4rl4y2.JPG" alt="Imagen desbloqueada">
+      </div>
+
+       <div class="watermark">
+        <img src="../imagenes/d3r3ch41.JPG" alt="Imagen desbloqueada">
+      </div>
+
+       <div class="watermark">
+        <img src="../imagenes/d3r3ch42.JPG" alt="Imagen desbloqueada">
       </div>
 
       <div class="actions">
