--- a/index.html
+++ b/index.html
@@ -122,12 +122,14 @@
 data-preference-id="611013744-724cc6b9-27cb-4b50-82b1-5804a0fa8e84" data-source="button">
 </script>
       <br>
- <!-- <p class="note">Pick Combo MLB+LMB momio +139</p>
-<!-- BOTÓN MERCADOPAGO
+
+ <p class="price">PARLAY Momio +138:</p>
+  <p class="note">Pick Combo LMB+FIFA CWC</p>
+<!-- BOTÓN MERCADOPAGO -->
       <script src="https://www.mercadopago.com.mx/integrations/v1/web-payment-checkout.js"
 data-preference-id="611013744-03580a65-a017-4076-a292-64605f697e4e" data-source="button">
 </script>
-      <br> -->
+      <br>
       
       <p style="font-size: 0.85rem; color: #888;">Al pagar, estás aceptando los términos y condiciones de nuestra comunidad.</p>
       <a href="https://www.onepick.com.mx/terminos/" class="terminos">Consulta términos y condiciones</a>
