--- a/index.html
+++ b/index.html
@@ -112,15 +112,15 @@
       <h1>OnePick</h1>
       <div class="icons">🍀🎯💰</div>
       <p class="price">$55 MXN</p>
-      <p class="note">Accede al PAQUETE ESPECIAL DE HOY exclusivo con una sola compra.</p>
+      <p class="note">Accede al Pick especial con una sola compra.</p>
       <p>¡Haz clic para pagar y desbloquear los pronósticos completos ahora!</p>
       
-       <p class="note">Paquete Especial MLB+LMB+FIFA CWC</p>
+     <!--  <p class="note">Paquete Especial MLB+LMB+FIFA CWC</p>
       <p class="price">Todo incluido en una sola compra, 2 Derechas + 2 Parlays, aprovecha y ahorra en un solo paquete.</p>
-      <!-- BOTÓN MERCADOPAGO -->
+      <!-- BOTÓN MERCADOPAGO
       <script src="https://www.mercadopago.com.mx/integrations/v1/web-payment-checkout.js"
 data-preference-id="611013744-724cc6b9-27cb-4b50-82b1-5804a0fa8e84" data-source="button">
-</script>
+</script>.  -->
       <br>
 
  <p class="price">PARLAY Momio +138:</p>
