--- a/picks/P1ckd3ld1420.html
+++ b/picks/P1ckd3ld1420.html
@@ -126,7 +126,7 @@
       <p class="message">Aquí tienes el pronóstico exclusivo del día. Este análisis fue preparado especialmente para ayudarte a tomar decisiones informadas.</p>
 
       <div class="watermark">
-        <img src="../imagenes/fjk3hdreu3acde.jpeg" alt="Imagen desbloqueada">
+        <img src="../imagenes/p4rl4y20.JPG" alt="Imagen desbloqueada">
       </div>
 
       <div class="actions">
