--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
 data-preference-id="611013744-724cc6b9-27cb-4b50-82b1-5804a0fa8e84" data-source="button">
 </script>.  -->
 
- <p class="resalto">Parlay Momio +117:</p>
-  <p class="note">Pick FIFA CWC vigencia 01:00 PM CDMX</p>
+<!-- <p class="resalto">Parlay Momio +117:</p>
+  <p class="note">Pick FIFA CWC vigencia 01:00 PM CDMX</p> -->
 <!-- BOTÓN MERCADOPAGO -->
-      <script src="https://www.mercadopago.com.mx/integrations/v1/web-payment-checkout.js"
+<!--      <script src="https://www.mercadopago.com.mx/integrations/v1/web-payment-checkout.js"
 data-preference-id="611013744-68298122-3888-4a73-a65b-a2ae67f9ce11" data-source="button">
 </script>
-      <br>
+      <br> -->
       
       
       <p class="resalto">Parlay Momio +113:</p>
