--- a/picks/p4qu3t350.html
+++ b/picks/p4qu3t350.html
@@ -126,7 +126,15 @@
       <p class="message">Aquí tienes el pronóstico exclusivo del día. Este análisis fue preparado especialmente para ayudarte a tomar decisiones informadas.</p>
 
       <div class="watermark">
-        <img src="../imagenes/sp3c14lCOMBO.png" alt="Imagen desbloqueada">
+        <img src="../imagenes/premium1.jpeg" alt="Imagen desbloqueada">
+      </div>
+      <br>
+      <div class="watermark">
+        <img src="../imagenes/premium2.jpeg" alt="Imagen desbloqueada">
+      </div>
+      <br>
+      <div class="watermark">
+        <img src="../imagenes/premium3.jpeg" alt="Imagen desbloqueada">
       </div>
 
       <div class="actions">
