--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@
         </div>  -->
         
         <div class="pick">
-          <p class="resalto">COMBO DUPLO DISPONIBLE:</p>
-          <p class="note">Parlay +103 & Derecha +100</p>
+          <p class="resalto">COMBO TRIPLE DISPONIBLE:</p>
+          <p class="note">3 Derechas Potentes, paga uno, llévate 3 🍀🔥</p>
           <script src="https://www.mercadopago.com.mx/integrations/v1/web-payment-checkout.js"
-data-preference-id="611013744-9c7f9038-589d-4534-9afe-fc7aaa54e356" data-source="button">
+data-preference-id="611013744-e64fc034-1168-46e7-b4b7-a9ed199de266" data-source="button">
 </script>
         </div>
 
