--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
       <img src="imagenes/logo-onepick-oficial.webp" alt="Logo OnePick" class="logo">
       <h1>OnePick</h1>
       <div class="icons">🍀🎯💰</div>
-      <p class="price">$35 MXN</p>
-      <p class="note">Accede al Pick COMBO especial de hoy con una sola compra.</p>
+      <p class="price">$50 MXN</p>
+      <p class="note">Accede al Pick COMBO TRIPLE especial de hoy con una sola compra.</p>
       <p>¡Haz clic para pagar y desbloquear los pronósticos completos ahora!</p>
 
       <div class="picks-container">
