Update and rename p4qu3t350.html to c0mb050verdes.html

--- a/picks/c0mb050verdes.html
+++ b/picks/c0mb050verdes.html
@@ -126,15 +126,19 @@
       <p class="message">Aquí tienes el pronóstico exclusivo del día. Este análisis fue preparado especialmente para ayudarte a tomar decisiones informadas.</p>
 
       <div class="watermark">
-        <img src="../imagenes/premium1.jpeg" alt="Imagen desbloqueada">
+        <img src="../imagenes/premium4270625t.jpeg" alt="Imagen desbloqueada">
       </div>
       <br>
       <div class="watermark">
-        <img src="../imagenes/premium2.jpeg" alt="Imagen desbloqueada">
+        <img src="../imagenes/premium3270625z.jpeg" alt="Imagen desbloqueada">
       </div>
       <br>
       <div class="watermark">
-        <img src="../imagenes/premium3.jpeg" alt="Imagen desbloqueada">
+        <img src="../imagenes/premium2270625n.jpeg" alt="Imagen desbloqueada">
+      </div>
+       <br>
+      <div class="watermark">
+        <img src="../imagenes/premium1270625x.jpeg" alt="Imagen desbloqueada">
       </div>
 
       <div class="actions">
