--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
       <img src="imagenes/logo-onepick-oficial.webp" alt="Logo OnePick" class="logo">
       <h1>OnePick</h1>
       <div class="icons">🍀🎯💰</div>
-      <p class="price">$50 MXN</p>
-      <p class="note">Accede al Pick COMBO TRIPLE especial de hoy con una sola compra.</p>
+      <p class="price">$55 MXN</p>
+      <p class="note">Accede al Pick COMBO ESPECIAL de hoy con una sola compra.</p>
       <p>¡Haz clic para pagar y desbloquear los pronósticos completos ahora!</p>
 
       <div class="picks-container">
@@ -167,10 +167,10 @@
         </div>  -->
         
         <div class="pick">
-          <p class="resalto">COMBO TRIPLE DISPONIBLE:</p>
-          <p class="note">3 Derechas Potentes, paga uno, llévate 3 🍀🔥</p>
+          <p class="resalto">COMBO ESPECIAL DISPONIBLE:</p>
+          <p class="note">🎯💰 4 Derechas Potentes, paga uno, llévate 4 🍀🔥</p>
           <script src="https://www.mercadopago.com.mx/integrations/v1/web-payment-checkout.js"
-data-preference-id="611013744-e64fc034-1168-46e7-b4b7-a9ed199de266" data-source="button">
+data-preference-id="611013744-aa606be7-7770-49fa-88c0-d127a7747e98" data-source="button">
 </script>
         </div>
 
