--- a/picks/c0mb050verdes.html
+++ b/picks/c0mb050verdes.html
@@ -121,7 +121,7 @@
 
   <div class="container">
     <div class="card">
-      <img src="../imagenes/oficiallogo.png" alt="Logo OnePick" class="logo">
+      <img src="../imagenes/OnePick_NewLogo_HQ.webp" alt="Logo OnePick" class="logo">
       <h1>¡Gracias por tu compra! 📈</h1>
       <p class="message">Aquí tienes el pronóstico exclusivo del día. Este análisis fue preparado especialmente para ayudarte a tomar decisiones informadas.</p>
 
