--- a/terminos/index.html
+++ b/terminos/index.html
@@ -85,7 +85,7 @@
   <div class="container">
     <div class="card">
 
-      <img src="../imagenes/oficiallogo.png" alt="Logo OnePick" class="logo">
+      <img src="../imagenes/OnePick_NewLogo_HQ.webp" alt="Logo OnePick" class="logo">
       <h1>Términos y Condiciones de Uso</h1>
 
       <p><strong>Fecha de entrada en vigor:</strong> 11 de junio de 2025</p>
