Update and rename P1ckd3ld1420.html to p1ckGarantizado27.html

--- a/picks/p1ckGarantizado27.html
+++ b/picks/p1ckGarantizado27.html
@@ -121,12 +121,12 @@
 
   <div class="container">
     <div class="card">
-      <img src="../imagenes/oficiallogo.png" alt="Logo OnePick" class="logo">
+      <img src="../imagenes/OnePick_NewLogo_HQ.webp" alt="Logo OnePick" class="logo">
       <h1>¡Gracias por tu compra! 📈</h1>
       <p class="message">Aquí tienes el pronóstico exclusivo del día. Este análisis fue preparado especialmente para ayudarte a tomar decisiones informadas.</p>
 
       <div class="watermark">
-        <img src="../imagenes/p4rl4y20.JPG" alt="Imagen desbloqueada">
+        <img src="../imagenes/p1ckGarantizado.png" alt="Imagen desbloqueada">
       </div>
 
       <div class="actions">
