--- a/index.html
+++ b/index.html
@@ -158,14 +158,15 @@
           </script>
         </div>   -->
         
-     <!--   <div class="pick">
-          <p class="resalto">Derecha 1</p>
-          <p class="note">Pick MLB</p>
+        <div class="pick">
+          <p class="resalto">⚠️PICK GARANTIZADO:⚠️</p>
+          <p class="note">👀¡Si no ganas esta derecha, te damos toda la próxima semana GRATIS!✅</p>
+          <p class="note">¡Garantizado!</p>
           <script src="https://www.mercadopago.com.mx/integrations/v1/web-payment-checkout.js"
-            data-preference-id="611013744-a5bdc3ca-7b0d-4d56-befd-dd80c40279cb" data-source="button">
-          </script>
-        </div>  -->
-        
+data-preference-id="611013744-5219882e-9d0c-4a13-9df0-9e1a1f027496" data-source="button">
+</script>
+        </div>
+
         <div class="pick">
           <p class="resalto">COMBO ESPECIAL DISPONIBLE:</p>
           <p class="note">🎯💰 4 Derechas Potentes, paga uno, llévate 4 🍀🔥</p>
