--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
       <img src="imagenes/OnePick_NewLogo_HQ.webp" alt="Logo OnePick" class="logo">
       <h1>OnePick</h1>
       <div class="icons">🍀🎯💰</div>
-      <p class="price">$55 MXN</p>
-      <p class="note">Accede al Pick COMBO ESPECIAL de hoy con una sola compra.</p>
+      <!-- <p class="price">$55 MXN</p> -->
+     <!-- <p class="note">Accede al Pick COMBO ESPECIAL de hoy con una sola compra.</p> -->
       <p>¡Haz clic para pagar y desbloquear los pronósticos completos ahora!</p>
 
       <div class="picks-container">
@@ -160,6 +160,7 @@
         
         <div class="pick">
           <p class="resalto">⚠️PICK GARANTIZADO:⚠️</p>
+          <p class="price">$120 MXN</p>
           <p class="note">👀¡Si no ganas esta derecha, te damos toda la próxima semana GRATIS!✅</p>
           <p class="note">¡Garantizado!</p>
           <script src="https://www.mercadopago.com.mx/integrations/v1/web-payment-checkout.js"
@@ -169,6 +170,7 @@ data-preference-id="611013744-5219882e-9d0c-4a13-9df0-9e1a1f027496" data-source=
 
         <div class="pick">
           <p class="resalto">COMBO ESPECIAL DISPONIBLE:</p>
+          <p class="price">$55 MXN</p>
           <p class="note">🎯💰 4 Derechas Potentes, paga uno, llévate 4 🍀🔥</p>
           <script src="https://www.mercadopago.com.mx/integrations/v1/web-payment-checkout.js"
 data-preference-id="611013744-aa606be7-7770-49fa-88c0-d127a7747e98" data-source="button">
