--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ data-preference-id="611013744-aa606be7-7770-49fa-88c0-d127a7747e98" data-source=
         <div class="pick">
           <p class="resalto">DERECHA 1:</p>
           <p class="price">$20 MXN</p>
-          <p class="note">Momio -125</p>
+          <p class="note">Momio -125 (Vence 06:00 PM Centro)</p>
           <script src="https://www.mercadopago.com.mx/integrations/v1/web-payment-checkout.js"
 data-preference-id="611013744-1cf7e621-6419-47aa-8610-a9b9cdbb2027" data-source="button">
 </script>
@@ -179,7 +179,7 @@ data-preference-id="611013744-1cf7e621-6419-47aa-8610-a9b9cdbb2027" data-source=
         <div class="pick">
           <p class="resalto">DERECHA 2:</p>
           <p class="price">$20 MXN</p>
-          <p class="note">Momio -115</p>
+          <p class="note">Momio -115 (Vence 07:00 PM Centro)</p>
           <script src="https://www.mercadopago.com.mx/integrations/v1/web-payment-checkout.js"
 data-preference-id="611013744-fa1a562c-aad6-45b6-8bdc-3f4b78adcd4e" data-source="button">
 </script>
@@ -188,7 +188,7 @@ data-preference-id="611013744-fa1a562c-aad6-45b6-8bdc-3f4b78adcd4e" data-source=
          <div class="pick">
           <p class="resalto">DERECHA 3:</p>
           <p class="price">$20 MXN</p>
-          <p class="note">Momio -120</p>
+          <p class="note">Momio -120 (Vence 08:00 PM Centro)</p>
          <script src="https://www.mercadopago.com.mx/integrations/v1/web-payment-checkout.js"
 data-preference-id="611013744-f648ea5b-5ad3-4467-8f00-4091c141c294" data-source="button">
 </script>
