--- a/index.html
+++ b/index.html
@@ -159,38 +159,29 @@
         </div>   -->
 
         <div class="pick">
-          <p class="resalto">COMBO ESPECIAL DISPONIBLE:</p>
+          <p class="resalto">Parlay UFC:</p>
           <p class="price">$55 MXN</p>
-          <p class="note">🎯💰 4 Derechas Potentes, paga uno, llévate 4 (se incluyen las 3 en venta disponibles en este sitio) 🍀🔥</p>
+          <p class="note">Pick UFC Fin de Semana Momio +127 (Vigencia 08:00 PM Centro)</p>
           <script src="https://www.mercadopago.com.mx/integrations/v1/web-payment-checkout.js"
-data-preference-id="611013744-aa606be7-7770-49fa-88c0-d127a7747e98" data-source="button">
+data-preference-id="611013744-7653fd33-ef56-4435-929e-e1337a17130e" data-source="button">
 </script>
         </div>
         
         <div class="pick">
-          <p class="resalto">DERECHA 1:</p>
+          <p class="resalto">Derecha 1 MLB:</p>
           <p class="price">$20 MXN</p>
-          <p class="note">Momio -125 (Vence 06:00 PM Centro)</p>
+          <p class="note">Momio -120 (Vence 02:00 PM Centro)</p>
           <script src="https://www.mercadopago.com.mx/integrations/v1/web-payment-checkout.js"
-data-preference-id="611013744-1cf7e621-6419-47aa-8610-a9b9cdbb2027" data-source="button">
-</script>
-        </div>
-
-        <div class="pick">
-          <p class="resalto">DERECHA 2:</p>
-          <p class="price">$20 MXN</p>
-          <p class="note">Momio -115 (Vence 07:00 PM Centro)</p>
-          <script src="https://www.mercadopago.com.mx/integrations/v1/web-payment-checkout.js"
-data-preference-id="611013744-fa1a562c-aad6-45b6-8bdc-3f4b78adcd4e" data-source="button">
+data-preference-id="611013744-ccc171b9-3405-4f19-8aa9-023f4d3d9c9f" data-source="button">
 </script>
         </div>
 
          <div class="pick">
-          <p class="resalto">DERECHA 3:</p>
+          <p class="resalto">Derecha 2 MLB:</p>
           <p class="price">$20 MXN</p>
-          <p class="note">Momio -120 (Vence 08:00 PM Centro)</p>
+          <p class="note">Momio -120 (Vence 02:00 PM Centro)</p>
          <script src="https://www.mercadopago.com.mx/integrations/v1/web-payment-checkout.js"
-data-preference-id="611013744-f648ea5b-5ad3-4467-8f00-4091c141c294" data-source="button">
+data-preference-id="611013744-fa5684f2-3c90-4f66-8360-58aa383dafe5" data-source="button">
 </script>
         </div>
 
