--- a/tableroonepick.html
+++ b/tableroonepick.html
@@ -23,14 +23,6 @@
       padding: 20px;
       flex-direction: column;
     }
-    
-     .logo {
-      width: 100px;
-      height: auto;
-      margin: 0 auto 15px;
-      display: block;
-    }
-    
     .card {
       background-color: #1e1e21;
       padding: 30px;
@@ -113,8 +105,7 @@
 <body>
   <div class="container">
     <div class="card">
-        <img src="imagenes/OnePick_NewLogo_HQ.webp" alt="Logo OnePick" class="logo">
-      <h1>TABLERO ONEPICK 2025</h1>
+      <h1>Tablero de Picks</h1>
 
       <div class="dashboard">
         <div class="metric"><h3>Total Picks</h3><p id="totalPicks">0</p></div>
@@ -164,8 +155,9 @@
   </div>
 
   <script>
-    const k3jey4a = '0n3p1ckW1n3v3r';
+    const PASSWORD = '0n3p1ckW1n3v3r';
     let picks = [];
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbzqpYDZNwWY3zwXNWczGBot7lp5qqAjjLGdRxSROOowtG8CvtQnws_ATZ2y-2u438n0/exec';
 
     function mostrarFormulario() {
       document.getElementById('auth-container').style.display = 'none';
@@ -174,7 +166,7 @@
 
     function verificarPassword() {
       const input = document.getElementById('password').value;
-      if (input === k3jey4a) {
+      if (input === PASSWORD) {
         sessionStorage.setItem('auth', 'true');
         mostrarFormulario();
       } else {
@@ -201,6 +193,12 @@
       picks.push(pick);
       agregarFilaTabla(pick);
       actualizarDashboard();
+
+      fetch(scriptURL, {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify(pick)
+      }).then(response => console.log('Guardado en Google Sheets')).catch(console.error);
 
       this.reset();
     });
