--- a/tableroonepick.html
+++ b/tableroonepick.html
@@ -159,7 +159,7 @@
   <script>
     const PASSWORD = '0n3p1ckW1n3v3r';
     let picks = [];
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbxOojZUvDjHhqJQqmxwaB2NMMHccW2R5b92FGE91kVqCu2JgZUT2MkM1bQvnOIY7r8E/exec';
+    const scriptURL = 'https://www.onepick.com.mx/proxy.php';
 
     function mostrarFormulario() {
       document.getElementById('auth-container').style.display = 'none';
