--- a/index.html
+++ b/index.html
@@ -161,20 +161,11 @@
     
         
         <div class="pick">
-          <p class="resalto">Derecha 1 MLB:</p>
-          <p class="price">$20 MXN</p>
-          <p class="note">Momio -120 (Vence 12:00 PM Centro)</p>
+          <p class="resalto">Grupo Exclusivo Mensual:</p>
+          <p class="price">$350 MXN</p>
+          <p class="note">✅ 1 a 3 PICKS diarios ✅ % de bankroll sugerido ✅ Control en línea de resultados (¡transparencia total!) ✅ Parlays soñadores cuando las estadísticas lo permitan ✅ Dinámicas exclusivas(Cupo Limitado, asegura tu lugar ahora)</p>
           <script src="https://www.mercadopago.com.mx/integrations/v1/web-payment-checkout.js"
-data-preference-id="611013744-dd8d945e-88e9-424e-a928-521ee4989556" data-source="button">
-</script>
-        </div>
-
-         <div class="pick">
-          <p class="resalto">Derecha 2 MLB:</p>
-          <p class="price">$20 MXN</p>
-          <p class="note">Momio -120 (Vence 05:00 PM Centro)</p>
-         <script src="https://www.mercadopago.com.mx/integrations/v1/web-payment-checkout.js"
-data-preference-id="611013744-6e89dee0-8097-4e2c-a8ea-f3b9e0b0a89f" data-source="button">
+data-preference-id="611013744-9939dd47-9639-4a4c-bd05-fea7c4b58f5d" data-source="button">
 </script>
         </div>
 
@@ -186,13 +177,13 @@ data-preference-id="611013744-6e89dee0-8097-4e2c-a8ea-f3b9e0b0a89f" data-source=
 
       <div class="testimonios">
         <strong>📢 Opiniones reales:</strong>
-        <p>“No es magia, pero me ayudó a afinar mis decisiones. Muy recomendable.”</p>
-        <p>“Llevo 3 días siguiendo los picks y me ha ido mejor que antes.”</p>
-        <p>“Fácil, directo, y lo mejor: sin suscripciones ni membresías.”</p>
+        <p>“Me ayudó a afinar mis selecciones. Muy recomendable.”</p>
+        <p>“Llevo 3 días siguiendo los Picks y me ha ido mejor que nunca.”</p>
+        <p>“Fácil, directo y con pagos seguros sin datos sospechosos.”</p>
       </div>
 
       <div class="footer">
-        +1300 seguidores en 
+        +1400 seguidores en 
         <a href="https://instagram.com/onepick_winever" target="_blank" title="Visita nuestro Instagram">
           <img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="Instagram">
         </a>
