--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             ✅ % de banca por jugada<br>
             ✅ Tabla de resultados pública<br>
             ✅ Parlays soñadores y dinámicas exclusivas<br><br>
-            📆 <strong>Inicio: 17 de JULIO</strong><br>
+            📆 <strong>Inicio: 18 de AGOSTO</strong><br>
             🎯 Cupo limitado, asegura tu lugar Hoy mismo
           </p>
 
