--- a/picks/p4rl4yufc55.html
+++ b/picks/p4rl4yufc55.html
@@ -126,7 +126,7 @@
       <p class="message">Aquí tienes el pronóstico exclusivo del día. Este análisis fue preparado especialmente para ayudarte a tomar decisiones informadas.</p>
 
       <div class="watermark">
-        <img src="../imagenes/parlayufc.jpeg" alt="Imagen desbloqueada">
+        <img src="../imagenes/parlayufc.png" alt="Imagen desbloqueada">
       </div>
 
       <div class="actions">
@@ -142,3 +142,4 @@
 
 </body>
 </html>
+
